# xgrep

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml  npm-publish.yml  release.yml  scorecard.yml
bench/: README.md  demo.sh  docker-bench.sh  fair-bench.sh  run.sh  vibe-coding-demo.sh
benchmarks/: bench_find.sh
docs/: benchmarks.md  positional-trigrams-design.md
npm/: Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
npm/__test__/: index.mjs
npm/src/: lib.rs
rust/: Cargo.toml
rust/benches/: bench_candidates.rs  bench_index.rs  bench_search.rs  common.rs
rust/fuzz/: Cargo.toml
rust/fuzz/fuzz/: Cargo.toml
rust/fuzz/fuzz/fuzz_targets/: fuzz_index_reader.rs  fuzz_posting_list.rs  fuzz_varint.rs
rust/fuzz/fuzz_targets/: fuzz_posting_list.rs
rust/src/: candidates.rs  error.rs  filetype.rs  git.rs  hints.rs  lib.rs  main.rs  mcp.rs  mcp_server.rs  mcp_tools.rs  output.rs  search.rs  trigram.rs  trigram_query.rs
rust/src/index/: builder.rs  cache.rs  format.rs  mod.rs  reader.rs  updater.rs
rust/tests/: api_test.rs  cli_exit_code_test.rs  cli_find_test.rs  mcp_integration_test.rs
