[package]
name = "xgrep-search"
version = "0.1.5"
edition = "2021"
rust-version = "1.85"
description = "Ultra-fast indexed code search with MCP server for AI agents. Trigram inverted index, 50x faster than ripgrep on repeated searches."
license = "MIT"
readme = "../README.md"
repository = "https://github.com/momokun7/xgrep"
keywords = ["search", "grep", "trigram", "index", "code-search"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["fuzz/"]

[[bin]]
name = "xg"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
memchr = "2"
ignore = "0.4"
anyhow = "1"
dirs-next = "2"
rayon = "1"
libc = "0.2"
regex = "1"
regex-syntax = "0.8"
tempfile = "3"
mimalloc = { version = "0.1", default-features = false }
serde_json = "1"

[features]
default = []
fuzz = []

[dev-dependencies]
proptest = "1"
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
